header finished (not fully responsive)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,51 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="wrap">
+        <header class="header">
 
+            <div class="top">
+
+                <div class="header-img">
+                    <img src="images/elitmobimain.png" alt="icon">
+                </div>
+
+                <div class="top-nav">
+                    <nav>
+                        <ul>
+                            <li><a href="" class="main">მთავარი</a></li>
+                            <li><a href="">ELIT NEWS   </a></li>
+                            <li><a href="">ჩვენს შესახებ</a></li>
+                            <li> <a href="">კონტაქტი   </a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+            </div>
+
+            <div class="bottom">
+
+                <div class="bottom-nav">
+                    <nav>
+                        <ul>
+                            <li><a href="">APPLE   </a></li>
+                            <li><a href="">SAMSUNG </a></li>
+                            <li><a href="">აქსესუარები  </a></li>
+                            <li><a href="">ჩვენს შესახებ </a></li>
+                            <li> <a href="">კონტაქტი   </a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="header-input">
+                    <form action="">
+                        <input type="text" placeholder="ძიება">
+                        <button type="submit"><i class="gg-search"></i></button>
+                    </form>
+                </div>
+            </div>
+        </header>
+    </div>
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/search.css' rel='stylesheet'>
 </body>
 </html>
