header finished (responsive)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
     <div class="wrap">
         <header class="header">
 
+            <div class="responsive-header">
+                <div class="burger-menu">
+                    <a href="">
+                        <div class="burger-div">
+                            <span class="burger"></span>
+                            <span class="burger"></span>
+                            <span class="burger"></span>
+                        </div>
+                        <div class="menu-div">
+                            <span class="menu">მენიუ</span>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="icon">
+                    <img src="images/elitmobimain.png" alt="elitmobi icon">
+                </div>
+
+
+                <div class="search">
+                    <a href=""><i class="gg-search"></i></a>
+                </div>
+            </div>
+
             <div class="top">
 
                 <div class="header-img">
@@ -18,12 +42,12 @@
 
                 <div class="top-nav">
                     <nav>
-                        <ul>
-                            <li><a href="" class="main">მთავარი</a></li>
-                            <li><a href="">ELIT NEWS   </a></li>
-                            <li><a href="">ჩვენს შესახებ</a></li>
-                            <li> <a href="">კონტაქტი   </a></li>
-                        </ul>
+                      <ul>
+                        <li><a href="" class="main">მთავარი</a></li>
+                        <li><a href="">ELIT NEWS   </a></li>
+                        <li><a href="">ჩვენს შესახებ</a></li>
+                        <li> <a href="">კონტაქტი   </a></li>
+                      </ul>
                     </nav>
                 </div>
 
