added second section (fully responsive)

--- a/index.html
+++ b/index.html
@@ -111,6 +111,40 @@
                     </div>
                   </div>
             </section>
+
+            <section class="section2">
+                <div class="images">
+                    <div class="warranty">
+                        <img src="images/warranty-1.png" alt="refund">
+                        <h4>გარანტია</h4>
+                        <p>საუკეთესო საგარანტიო პირობები</p>
+                    </div>
+
+                    <div class="delivery">
+                        <img src="images/delivery-1.png" alt="delivery truck">
+                        <h4>უფასო მიწოდება</h4>
+                        <p>მთელი საქართველოს მასშტაბით</p>
+                    </div>
+
+                    <div class="original">
+                        <img src="images/original-1.png" alt="phone image">
+                        <h4>ორიგინალი</h4>
+                        <p>ამერიკული ხარისხი</p>
+                    </div>
+
+                    <div class="payment">
+                        <img src="images/paymanet-1.png" alt="debit card image">
+                        <h4>განვადება</h4>
+                        <p>თიბისი, საქართველო, კრედო</p>
+                    </div>
+                </div>
+
+                <div class="phones-text">
+                    <h1>მობილური ტელეფონები</h1>
+                </div>
+
+
+            </section>
         </main>
     </div>
 </body>
