--- a/index.html
+++ b/index.html
@@ -146,6 +146,18 @@
 
             </section>
         </main>
+
+        <footer class="index-footer">
+            <div class="footer-wrap">
+                <div class="footer-image">
+                    <img src="images/elitmobimain.png" alt="elitmob icon">
+                </div>
+
+                <div class="footer-location">
+                    <p>მისამართი: თბილისი, აკაკი წერეთლის 1</p>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
