--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/search.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/4a7f18d6b4.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>   
     
@@ -35,7 +35,7 @@
 
 
                 <div class="search">
-                    <a href=""><i class="gg-search"></i></a>
+                    <a href=""><i class="fa-solid fa-magnifying-glass search-icon"></i></a>
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                 <div class="header-input">
                     <form action="">
                         <input type="text" placeholder="ძიება">
-                        <button type="submit"><i class="gg-search"></i></button>
+                        <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                     </form>
                 </div>
             </div>
@@ -159,5 +159,7 @@
             </div>
         </footer>
     </div>
+
+    <a href="#" class="scroll-on-top"></a>
 </body>
 </html>
