--- a/index.html
+++ b/index.html
@@ -145,6 +145,45 @@
 
 
             </section>
+
+            <section class="section3">
+                <div class="section-3-div">
+
+                    <div class="s10">
+                        <a href="">
+                          <img src="images/iphone-11.jpg" alt="">   
+                          <p>lorem ipsum dolore magnifico n</p>
+                        </a>
+                        <h2>499₾-დან</h2>
+                    </div>
+                    
+                    <div class="iphone-xr">
+                        <a href="">
+                            <img src="images/iphone-11.jpg" alt="">
+                            <p>lorem ipsum dolore magnifico n</p>
+                        </a>
+                        <h2>499₾-დან</h2>
+                    </div>
+
+                    <div class="iphone-11">
+                        <a href="">
+                          <img src="images/iphone-11.jpg" alt="">     
+                          <p>lorem ipsum dolore magnifico n</p>
+                        </a>
+                        <h2>499₾-დან</h2>
+                    </div>
+
+                    <div class="iphone-12">
+                        <a href="">
+                            <img src="images/iphone-11.jpg" alt="">    
+                            <p>lorem ipsum dolore magnifico n</p>
+                        </a>
+                        <h2>499₾-დან</h2>
+                    </div>
+
+
+                </div>
+            </section>
         </main>
 
         <footer class="index-footer">
