scroll on top fixed

--- a/index.html
+++ b/index.html
@@ -329,6 +329,9 @@
         </footer>
     </div>
 
-    <a href="#" class="scroll-on-top"></a>
+    <div class="scroll-button">
+      <a href="#" class="scroll-on-top"><i class="fa-solid fa-angle-up"></i></a>
+    </div>
+
 </body>
 </html>
