--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                       <ul>
                         <li><a href="" class="main">მთავარი</a></li>
                         <li><a href="">ELIT NEWS   </a></li>
-                        <li><a href="">ჩვენს შესახებ</a></li>
+                        <li><a href="pages/about-us.html">ჩვენს შესახებ</a></li>
                         <li> <a href="">კონტაქტი   </a></li>
                       </ul>
                     </nav>
@@ -66,7 +66,7 @@
                             <li><a href="">APPLE   </a></li>
                             <li><a href="">SAMSUNG </a></li>
                             <li><a href="">აქსესუარები  </a></li>
-                            <li><a href="">ჩვენს შესახებ </a></li>
+                            <li><a href="pages/about-us.html">ჩვენს შესახებ </a></li>
                             <li> <a href="">კონტაქტი   </a></li>
                         </ul>
                     </nav>
