added footer on about us

--- a/index.html
+++ b/index.html
@@ -308,15 +308,11 @@
                         </a>
                         <h2>899 ₾-დან</h2>
                     </div>
-
-                    
-
-
                 </div>
             </section>
         </main>
 
-        <footer class="index-footer">
+        <footer class="footer">
             <div class="footer-wrap">
                 <div class="footer-image">
                     <img src="images/elitmobimain.png" alt="elitmob icon">
