--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -78,6 +78,21 @@
             </div>
         </header>
 
+
+
+        
+        <footer class="footer">
+            <div class="footer-wrap">
+                <div class="footer-image">
+                    <img src="../images/elitmobimain.png" alt="elitmob icon">
+                </div>
+
+                <div class="footer-location">
+                    <p>მისამართი: თბილისი, აკაკი წერეთლის 1</p>
+                </div>
+            </div>
+        </footer>
+
     </div>
 </body>
 </html>
