--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -78,6 +78,24 @@
             </div>
         </header>
 
+        <main class="about-us-main">
+            <article>
+                <p> ჩვენი კომპანია დაფუძნებულია რამდენიმე
+                    მარტივ პრინციპზე  :  იაფი ფასები, 
+                    საუკეთესო  ხარისხი და დიდი არჩევანი
+                    , მომხმარებლებს შევთავაზოთ მაქსიმალურად
+                    მოქნილი , სწრაფი , გამჭვირვალე და მათზე
+                    მორგებული პირობები
+                    <br><br>
+                    ჩვენ გთავაზობთ მეორად ამერიკულ ტელეფონებს,
+                    საუკეთესო ფასად , უმაღლეს ხარისხს , რაც მთავარია
+                    გარანტიით. მათთვის ვისაც  სურს ( დაზოგოს ფული )
+                    და არ  გადაიხადოს ახალში გაცილებით ძვირი ან მათთვის
+                    ვისაც ახლის ყიდვის საშუალება არაქვს და უნდა შეიძინოს
+                    საუკეთესო ხარისხის ტელეფონები საუკეთესო ფასად
+                </p>
+            </article>
+        </main>
 
 
         
