--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ჩვენს შესახებ - elitmobi.ge</title>
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/4a7f18d6b4.js" crossorigin="anonymous"></script>
 
@@ -45,10 +45,10 @@
                 <div class="top-nav">
                     <nav>
                       <ul>
-                        <li><a href="" class="main">მთავარი</a></li>
-                        <li><a href="">ELIT NEWS   </a></li>
-                        <li><a href="">ჩვენს შესახებ</a></li>
-                        <li> <a href="">კონტაქტი   </a></li>
+                        <li><a href="../index.html">მთავარი</a></li>
+                        <li><a href="../pages/news.html">ELIT NEWS   </a></li>
+                        <li><a href="../pages/about-us.html" class="header-main">ჩვენს შესახებ</a></li>
+                        <li><a href="../pages/contact.html">კონტაქტი</a></li>
                       </ul>
                     </nav>
                 </div>
@@ -63,8 +63,8 @@
                             <li><a href="">APPLE   </a></li>
                             <li><a href="">SAMSUNG </a></li>
                             <li><a href="">აქსესუარები  </a></li>
-                            <li><a href="">ჩვენს შესახებ </a></li>
-                            <li> <a href="">კონტაქტი   </a></li>
+                            <li><a>ჩვენს შესახებ</a></li>
+                            <li><a href="../pages/contact.html">კონტაქტი</a></li>
                         </ul>
                     </nav>
                 </div>
