--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>კონტაქტი - elitmobi.ge</title>
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/4a7f18d6b4.js" crossorigin="anonymous"></script>
 
@@ -45,10 +45,10 @@
                 <div class="top-nav">
                     <nav>
                       <ul>
-                        <li><a href="" class="main">მთავარი</a></li>
-                        <li><a href="">ELIT NEWS   </a></li>
-                        <li><a href="">ჩვენს შესახებ</a></li>
-                        <li> <a href="">კონტაქტი   </a></li>
+                        <li><a href="../index.html">მთავარი</a></li>
+                        <li><a href="../pages/news.html">ELIT NEWS   </a></li>
+                        <li><a href="../pages/about-us.html">ჩვენს შესახებ</a></li>
+                        <li><a class="header-main">კონტაქტი</a></li>
                       </ul>
                     </nav>
                 </div>
@@ -63,8 +63,8 @@
                             <li><a href="">APPLE   </a></li>
                             <li><a href="">SAMSUNG </a></li>
                             <li><a href="">აქსესუარები  </a></li>
-                            <li><a href="">ჩვენს შესახებ </a></li>
-                            <li> <a href="">კონტაქტი   </a></li>
+                            <li><a href="../pages/about-us.html">ჩვენს შესახებ</a></li>
+                            <li><a>კონტაქტი</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -108,7 +108,14 @@
 
                 <div class="right">
                     <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1252.0252467972846!2d44.7903993137506!3d41.724086453148175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404473ac83e7580f%3A0x591849ddec5b81d0!2sElit%20Mobi!5e0!3m2!1sen!2sge!4v1639649267445!5m2!1sen!2sge" width="800" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?
+                        pb=!1m18!1m12!1m3!1d1252.0252467972846!2d44.790
+                        3993137506!3d41.724086453148175!2m3!1f0!2f0!3f0
+                        !3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404473ac83
+                        e7580f%3A0x591849ddec5b81d0!2sElit%20Mobi!5e0!3
+                        m2!1sen!2sge!4v1639649267445!5m2!1sen!2sge" 
+                        width="800" height="300" style="border:0;" 
+                        allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
             </section>
