--- a/pages/news.html
+++ b/pages/news.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     
+
+
+    <div class="scroll-button">
+        <a href="#" class="scroll-on-top"><i class="fa-solid fa-angle-up"></i></a>
+      </div>
 </body>
 </html>
