--- a/pages/contact.html
+++ b/pages/contact.html
@@ -79,7 +79,7 @@
         </header>
 
         <main class="contact-main">
-            <section>
+            <section class="contact-section-1">
                 <div class="left">
                     
                     <div class="text">
@@ -108,7 +108,7 @@
 
                 <div class="right">
                     <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?
+                        <iframe class="iframe" src="https://www.google.com/maps/embed?
                         pb=!1m18!1m12!1m3!1d1252.0252467972846!2d44.790
                         3993137506!3d41.724086453148175!2m3!1f0!2f0!3f0
                         !3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404473ac83
