changed main icon sources

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="icon">
-                    <img src="images/elitmobimain.png" alt="elitmobi icon">
+                    <img src="images/main-images/elitmobimain.png" alt="elitmobi icon">
                 </div>
 
 
@@ -42,7 +42,7 @@
             <div class="top">
 
                 <div class="header-img">
-                    <img src="images/elitmobimain.png" alt="icon">
+                    <img src="images/main-images/elitmobimain.png" alt="icon">
                 </div>
 
                 <div class="top-nav">
@@ -315,7 +315,7 @@
         <footer class="footer">
             <div class="footer-wrap">
                 <div class="footer-image">
-                    <img src="images/elitmobimain.png" alt="elitmob icon">
+                    <img src="images/main-images/elitmobimain.png" alt="elitmob icon">
                 </div>
 
                 <div class="footer-location">
