--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="icon">
-                    <img src="../images/elitmobimain.png" alt="elitmobi icon">
+                    <img src="../images/main-images/elitmobimain.png" alt="elitmobi icon">
                 </div>
 
 
@@ -39,7 +39,7 @@
             <div class="top">
 
                 <div class="header-img">
-                    <img src="../images/elitmobimain.png" alt="icon">
+                    <img src="../images/main-images/elitmobimain.png" alt="icon">
                 </div>
 
                 <div class="top-nav">
@@ -124,7 +124,7 @@
         <footer class="footer">
             <div class="footer-wrap">
                 <div class="footer-image">
-                    <img src="../images/elitmobimain.png" alt="elitmob icon">
+                    <img src="../images/main-images/elitmobimain.png" alt="elitmob icon">
                 </div>
 
                 <div class="footer-location">
