contact page working

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -89,7 +89,7 @@
                             <li><span>მობ.ნომერი: +995 557 517 617</span></li>
                             <li><span>ელ-ფოსტა:</span> Elitmobiinfo@gmail.com</li>
                             <li><span>მისამართი:</span> თბილისი, ა.წერეთლის ქ. N1</li>
-                            <li><span>facebook:</span> https://www.facebook.com/elitmobi</li>
+                            <li><span>facebook:</span><a href="https://www.facebook.com/elitmobi">https://www.facebook.com/elitmobi</a></li>
                             <li><span>სამუშაო გრაფიკი:</span></li>
                             <li><span>ორშაბათი-პარასკევი:</span> 11:00-18:30 სთ</li>
                             <li><span>შაბათი:</span> 12:00-17:00</li>
@@ -97,11 +97,11 @@
                     </div>
 
                     <div class="icons">
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
+                        <a href="" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="" class="pinterest"><i class="fa-brands fa-pinterest"></i></a>
+                        <a href="" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="" class="telegram"><i class="fa-brands fa-telegram"></i></a>
                     </div>
 
                 </div>
