--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </div>
 
                     <div class="payment">
-                        <img src="images/main-images /paymanet-1.png" alt="debit card image">
+                        <img src="images/main-images/paymanet-1.png" alt="debit card image">
                         <h4>განვადება</h4>
                         <p>თიბისი, საქართველო, კრედო</p>
                     </div>
