--- a/pages/news.html
+++ b/pages/news.html
@@ -8,11 +8,96 @@
     <script src="https://kit.fontawesome.com/4a7f18d6b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div class="wrap">
+        <header class="header">
+
+            <div class="responsive-header">
+                <div class="burger-menu">
+                    <a href="">
+                        <div class="burger-div">
+                            <span class="burger"></span>
+                            <span class="burger"></span>
+                            <span class="burger"></span>
+                        </div>
+                        <div class="menu-div">
+                            <span class="menu">მენიუ</span>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="icon">
+                    <img src="../images/main-images/elitmobimain.png" alt="elitmobi icon">
+                </div>
+
+
+                <div class="search">
+                    <a href=""><i class="fa-solid fa-magnifying-glass search-icon"></i></a>
+                </div>
+            </div>
+
+            <div class="top">
+
+                <div class="header-img">
+                    <img src="../images/main-images/elitmobimain.png" alt="icon">
+                </div>
+
+                <div class="top-nav">
+                    <nav>
+                      <ul>
+                        <li><a href="../index.html">მთავარი</a></li>
+                        <li><a href="../pages/news.html">ELIT NEWS   </a></li>
+                        <li><a href="../pages/about-us.html" class="header-main">ჩვენს შესახებ</a></li>
+                        <li><a href="../pages/contact.html">კონტაქტი</a></li>
+                      </ul>
+                    </nav>
+                </div>
+
+            </div>
+
+            <div class="bottom">
+
+                <div class="bottom-nav">
+                    <nav>
+                        <ul>
+                            <li><a href="">APPLE   </a></li>
+                            <li><a href="">SAMSUNG </a></li>
+                            <li><a href="">აქსესუარები  </a></li>
+                            <li><a>ჩვენს შესახებ</a></li>
+                            <li><a href="../pages/contact.html">კონტაქტი</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="header-input">
+                    <form action="">
+                        <input type="text" placeholder="ძიება">
+                        <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    </form>
+                </div>
+            </div>
+        </header>
+
+
+
+
+        
+        <footer class="footer">
+            <div class="footer-wrap">
+                <div class="footer-image">
+                    <img src="../images/main-images/elitmobimain.png" alt="elitmob icon">
+                </div>
+
+                <div class="footer-location">
+                    <p>მისამართი: თბილისი, აკაკი წერეთლის 1</p>
+                </div>
+            </div>
+        </footer>
+
+    </div>
 
 
     <div class="scroll-button">
         <a href="#" class="scroll-on-top"><i class="fa-solid fa-angle-up"></i></a>
-      </div>
+      </div>    
 </body>
 </html>
