news page structure

--- a/pages/news.html
+++ b/pages/news.html
@@ -77,7 +77,40 @@
             </div>
         </header>
 
+        <main class="news-main">
+            <div class="news-main-wrapper">
 
+                <div class="ios17">
+
+                </div>
+
+                <div class="new-device">
+
+                </div>
+
+                <div class="samsung-ring">
+
+                </div>
+
+                <div class="new-audi">
+
+                </div>
+
+                <div class="apple-store">
+
+                </div>
+
+                <div class="apple-2022">
+
+                </div>
+
+                <div class="s22-sales">
+                    
+                </div>
+
+
+            </div>
+        </main>
 
 
         
