added apple and samsung page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -60,8 +60,8 @@
                 <div class="bottom-nav">
                     <nav>
                         <ul>
-                            <li><a href="">APPLE   </a></li>
-                            <li><a href="">SAMSUNG </a></li>
+                            <li><a href="../pages/apple.html">APPLE   </a></li>
+                            <li><a href="../pages/samsung.html">SAMSUNG </a></li>
                             <li><a href="">აქსესუარები  </a></li>
                             <li><a href="../pages/about-us.html">ჩვენს შესახებ</a></li>
                             <li><a>კონტაქტი</a></li>
