--- a/pages/news.html
+++ b/pages/news.html
@@ -45,7 +45,7 @@
                     <nav>
                       <ul>
                         <li><a href="../index.html">მთავარი</a></li>
-                        <li><a href="../pages/news.html">ELIT NEWS   </a></li>
+                        <li><a>ELIT NEWS</a></li>
                         <li><a href="../pages/about-us.html" class="header-main">ჩვენს შესახებ</a></li>
                         <li><a href="../pages/contact.html">კონტაქტი</a></li>
                       </ul>
@@ -59,10 +59,10 @@
                 <div class="bottom-nav">
                     <nav>
                         <ul>
-                            <li><a href="">APPLE   </a></li>
-                            <li><a href="">SAMSUNG </a></li>
+                            <li><a href="../pages/apple.html">APPLE   </a></li>
+                            <li><a href="../pages/samsung.html">SAMSUNG </a></li>
                             <li><a href="">აქსესუარები  </a></li>
-                            <li><a>ჩვენს შესახებ</a></li>
+                            <li><a href="../pages/about-us.html">ჩვენს შესახებ</a></li>
                             <li><a href="../pages/contact.html">კონტაქტი</a></li>
                         </ul>
                     </nav>
