--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <div class="bottom-nav">
                     <nav>
                         <ul>
-                            <li><a href="">APPLE   </a></li>
-                            <li><a href="">SAMSUNG </a></li>
+                            <li><a href="pages/apple.html">APPLE   </a></li>
+                            <li><a href="pages/samsung.html">SAMSUNG </a></li>
                             <li><a href="">აქსესუარები  </a></li>
                             <li><a href="pages/about-us.html">ჩვენს შესახებ</a></li>
                             <li><a href="pages/contact.html">კონტაქტი</a></li>
