--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -47,7 +47,7 @@
                       <ul>
                         <li><a href="../index.html">მთავარი</a></li>
                         <li><a href="../pages/news.html">ELIT NEWS   </a></li>
-                        <li><a href="../pages/about-us.html" class="header-main">ჩვენს შესახებ</a></li>
+                        <li><a class="header-main">ჩვენს შესახებ</a></li>
                         <li><a href="../pages/contact.html">კონტაქტი</a></li>
                       </ul>
                     </nav>
@@ -60,8 +60,8 @@
                 <div class="bottom-nav">
                     <nav>
                         <ul>
-                            <li><a href="">APPLE   </a></li>
-                            <li><a href="">SAMSUNG </a></li>
+                            <li><a href="../pages/apple.html">APPLE   </a></li>
+                            <li><a href="../pages/samsung.html">SAMSUNG </a></li>
                             <li><a href="">აქსესუარები  </a></li>
                             <li><a>ჩვენს შესახებ</a></li>
                             <li><a href="../pages/contact.html">კონტაქტი</a></li>
