created phone page

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </div>
                     
                     <div>
-                        <a href="">
+                        <a href="pages/phones/iphone-xr-64gb.html">
                             <img src="images/iphone/iPhone-XR-64GB.jpg" alt="iphone-xr">
                             <p>iPhone XR 64GB ( Black )</p>
                         </a>
