finished news pages

--- a/pages/news.pages/audi-5-G.html
+++ b/pages/news.pages/audi-5-G.html
@@ -81,12 +81,18 @@
             <section>
 
                 <div class="title">
-                    <p>ELIT NEWS</p>
+                    <a href="../news.html"><p>ELIT NEWS</p></a>
                     <h1>2024 წლისთვის Audi 5G კავშირს დაამატებს მანქანებში</h1>
                 </div>
 
                 <div class="image">
-                    <img src="" alt="">
+                    <div class="wrap">
+                        <div class="date">
+                            <p>25</p>
+                            <h4>თებ</h4>
+                        </div>
+                        <img src="../../images/news-images/audi-5-g.png" alt="Audi">    
+                    </div>
                 </div>
 
                 <div class="description">
