added alts to images

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
                     <div>
                         <a href="">
-                            <img src="images/iphone/iPhone-7-Silver.jpg" alt="">
+                            <img src="images/iphone/iPhone-7-Silver.jpg" alt="iphone-7-silver">
                             <p>iPhone 7 32GB ( Silver )</p>
                         </a>
                         <h2>199₾-დან</h2>
@@ -588,7 +588,7 @@
 
                     <div>
                         <a href="">
-                            <img src="images/iphone/iPhone-11-purple-.jpg" alt="">
+                            <img src="images/iphone/iPhone-11-purple-.jpg" alt="iPhone-11-purple">
                             <p>iPhone 11 64GB ( Purple )</p>
                         </a>
                         <h2>799₾-დან</h2>
