uncommented news main

--- a/pages/news.html
+++ b/pages/news.html
@@ -77,7 +77,7 @@
             </div>
         </header>
 
-        <!-- <main class="news-main">
+        <main class="news-main">
             <section class="news-section">
                 <div class="news-section-wrapper">
 
@@ -177,7 +177,7 @@
     
                 </div>
             </section>
-        </main> -->
+        </main>
 
 
         
