--- a/pages/news.pages/ios-17.html
+++ b/pages/news.pages/ios-17.html
@@ -12,18 +12,16 @@
         <header class="header">
 
             <div class="responsive-header">
-                <div class="burger-menu">
-                    <a href="">
-                        <div class="burger-div">
-                            <span class="burger"></span>
-                            <span class="burger"></span>
-                            <span class="burger"></span>
-                        </div>
-                        <div class="menu-div">
-                            <span class="menu">მენიუ</span>
-                        </div>
-                    </a>
-                </div>
+                <button class="burger-menu">
+                            <div class="hamburger">
+                                <div class="bar"></div>
+                            </div>
+
+
+                            <div class="menu-div">
+                                <span class="menu">მენიუ</span>
+                            </div>
+                    </button>
 
                 <div class="icon">
                     <img src="../../../images/main-images/elitmobimain.png" alt="elitmobi icon">
