linked icons to main page

--- a/pages/news.pages/apple-device.html
+++ b/pages/news.pages/apple-device.html
@@ -13,7 +13,7 @@
 
             <div class="responsive-header">
                 <button class="burger-menu">
-                            <div class="hamburger">
+                            <div class="hamburger is-active">
                                 <div class="bar"></div>
                             </div>
 
@@ -24,7 +24,7 @@
                     </button>
 
                 <div class="icon">
-                    <img src="../../../images/main-images/elitmobimain.png" alt="elitmobi icon">
+                    <img src="../../images/main-images/elitmobimain.png" alt="icon">
                 </div>
 
 
@@ -36,7 +36,7 @@
             <div class="top">
 
                 <div class="header-img">
-                    <img src="../../../images/main-images/elitmobimain.png" alt="icon">
+                    <img src="../../images/main-images/elitmobimain.png" alt="icon">
                 </div>
 
                 <div class="top-nav">
@@ -113,7 +113,7 @@
         <footer class="footer">
             <div class="footer-wrap">
                 <div class="footer-image">
-                    <img src="../../../images/main-images/elitmobimain.png" alt="elitmob icon">
+                    <img src="../../images/main-images/elitmobimain.png" alt="icon">
                 </div>
 
                 <div class="footer-location">
