--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
                     <button class="burger-menu">
-                            <div class="hamburger">
+                            <div class="hamburger is-active">
                                 <div class="bar"></div>
                             </div>
 
@@ -39,7 +39,7 @@
                 <div class="top">
 
                     <div class="header-img">
-                        <img src="images/main-images/elitmobimain.png" alt="icon">
+                        <img src="images/main-images/elitmobimain.png" alt="elitmobi icon">
                     </div>
 
                     <div class="top-nav">
@@ -607,7 +607,7 @@
             <footer class="footer">
                 <div class="footer-wrap">
                     <div class="footer-image">
-                        <img src="images/main-images/elitmobimain.png" alt="elitmob icon">
+                        <a href="index.html"><img src="images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                     </div>
 
                     <div class="footer-location">
@@ -621,9 +621,7 @@
       <a href="#" class="scroll-on-top"><i class="fa-solid fa-angle-up"></i></a>
     </div>
 
-    <!-- <button class="hamburger">
-        <div class="bar"></div>
-    </button> -->
+
 
 
     <script src="https://kit.fontawesome.com/4a7f18d6b4.js" crossorigin="anonymous"></script>
