--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,7 +14,7 @@
 
             <div class="responsive-header">
                 <button class="burger-menu">
-                            <div class="hamburger">
+                            <div class="hamburger is-active">
                                 <div class="bar"></div>
                             </div>
 
@@ -25,7 +25,7 @@
                     </button>
 
                 <div class="icon">
-                    <img src="../images/main-images/elitmobimain.png" alt="elitmobi icon">
+                    <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
 
@@ -37,7 +37,7 @@
             <div class="top">
 
                 <div class="header-img">
-                    <img src="../images/main-images/elitmobimain.png" alt="icon">
+                    <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
                 <div class="top-nav">
