--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <ul>
                                 <li><a href="pages/apple.html">APPLE   </a></li>
                                 <li><a href="pages/samsung.html">SAMSUNG </a></li>
-                                <li><a href="">აქსესუარები  </a></li>
+                                <li><a href="">სერვისები  </a></li>
                                 <li><a href="pages/about-us.html">ჩვენს შესახებ</a></li>
                                 <li><a href="pages/contact.html">კონტაქტი</a></li>
                             </ul>
