--- a/pages/samsung.html
+++ b/pages/samsung.html
@@ -59,8 +59,8 @@
                     <nav>
                         <ul>
                             <li><a href="../pages/apple.html">APPLE   </a></li>
-                            <li><a href="../pages/samsung.html">SAMSUNG </a></li>
-                            <li><a href="">აქსესუარები  </a></li>
+                            <li><a>SAMSUNG </a></li>
+                            <li><a href="../pages/services.html">სერვისები</a></li>
                             <li><a href="../pages/about-us.html">ჩვენს შესახებ</a></li>
                             <li><a href="../pages/contact.html">კონტაქტი</a></li>
                         </ul>
