added responsive burger menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
                     <button class="burger-menu">
-                            <div class="hamburger is-active">
+                            <div class="hamburger">
                                 <div class="bar"></div>
                             </div>
 
@@ -77,6 +77,18 @@
                     </div>
                 </div>
             </header>
+
+            <nav class="mobile-nav">
+                <ul>
+                    <li><a class="header-main">მთავარი</a></li>
+                    <li><a href="pages/apple.html">APPLE</a></li>
+                    <li><a href="pages/samsung.html">SAMSUNG</a></li>
+                    <li><a href="pages/services.html">სერვისები  </a></li>
+                    <li><a href="pages/news.html">ELIT NEWS</a></li>
+                    <li><a href="pages/about-us.html">ჩვენს შესახებ</a></li>
+                    <li><a href="pages/contact.html">კონტაქტი</a></li>
+                </ul>
+            </nav>
 
             <main class="index-main">
                 <section class="section1">
@@ -627,5 +639,6 @@
     <script src="https://kit.fontawesome.com/4a7f18d6b4.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>   
+    <script src="js/main.js"></script>
 </body>
 </html>
