added tbc logo to main page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <div class="top">
 
                     <div class="header-img">
+                        <img class="tbc-logo" src="images/main-images/tbc-logo.png" alt="tbc-logo">
                         <img src="images/main-images/elitmobimain.png" alt="elitmobi icon">
                     </div>
 
