added tbc logo & burger menu changes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     </button>
 
                     <div class="icon">
+                        <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                         <img src="images/main-images/elitmobimain.png" alt="elitmobi icon">
                     </div>
 
@@ -39,7 +40,7 @@
                 <div class="top">
 
                     <div class="header-img">
-                        <img class="tbc-logo" src="images/main-images/tbc-logo.png" alt="tbc-logo">
+                        <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                         <img src="images/main-images/elitmobimain.png" alt="elitmobi icon">
                     </div>
 
