--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -14,7 +14,7 @@
 
             <div class="responsive-header">
                 <button class="burger-menu">
-                            <div class="hamburger is-active">
+                            <div class="hamburger">
                                 <div class="bar"></div>
                             </div>
 
@@ -25,6 +25,7 @@
                     </button>
 
                 <div class="icon">
+                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -37,6 +38,7 @@
             <div class="top">
 
                 <div class="header-img">
+                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -76,6 +78,18 @@
             </div>
         </header>
 
+        <nav class="mobile-nav">
+            <ul>
+                <li><a href="../index.html">მთავარი</a></li>
+                <li><a href="../pages/apple.html">APPLE</a></li>
+                <li><a href="../pages/samsung.html">SAMSUNG</a></li>
+                <li><a href="../pages/services.html">სერვისები  </a></li>
+                <li><a href="../pages/news.html">ELIT NEWS</a></li>
+                <li><a class="header-main">ჩვენს შესახებ</a></li>
+                <li><a href="../pages/contact.html">კონტაქტი</a></li>
+            </ul>
+        </nav>
+
         <main class="about-us-main">
             <article>
                 <p> ჩვენი კომპანია დაფუძნებულია რამდენიმე
@@ -111,6 +125,6 @@
 
     </div>
 
-    
+    <script src="../js/main.js"></script>
 </body>
 </html>
