--- a/pages/news.pages/apple-device.html
+++ b/pages/news.pages/apple-device.html
@@ -13,7 +13,7 @@
 
             <div class="responsive-header">
                 <button class="burger-menu">
-                            <div class="hamburger is-active">
+                            <div class="hamburger">
                                 <div class="bar"></div>
                             </div>
 
@@ -24,6 +24,7 @@
                     </button>
 
                 <div class="icon">
+                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <img src="../../images/main-images/elitmobimain.png" alt="icon">
                 </div>
 
@@ -36,6 +37,7 @@
             <div class="top">
 
                 <div class="header-img">
+                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <img src="../../images/main-images/elitmobimain.png" alt="icon">
                 </div>
 
