--- a/pages/apple.html
+++ b/pages/apple.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="wrap">
-        <header class="header">
+        <header class="header ">
 
             <div class="responsive-header">
                 <button class="burger-menu">
-                            <div class="hamburger is-active">
+                            <div class="hamburger">
                                 <div class="bar"></div>
                             </div>
 
@@ -25,6 +25,7 @@
                     </button>
 
                 <div class="icon">
+                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -37,6 +38,7 @@
             <div class="top">
 
                 <div class="header-img">
+                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -75,6 +77,18 @@
                 </div>
             </div>
         </header>
+
+        <nav class="mobile-nav">
+            <ul>
+                <li><a href="../index.html">მთავარი</a></li>
+                <li><a class="header-main">APPLE</a></li>
+                <li><a href="../pages/samsung.html">SAMSUNG</a></li>
+                <li><a href="../pages/services.html">სერვისები  </a></li>
+                <li><a href="../pages/news.html">ELIT NEWS</a></li>
+                <li><a href="../pages/about-us.html">ჩვენს შესახებ</a></li>
+                <li><a href="../pages/contact.html">კონტაქტი</a></li>
+            </ul>
+        </nav>
 
 
         <main class="apple-main">
@@ -480,6 +494,6 @@
 
     </div>
 
-    
+    <script src="../js/main.js"></script>
 </body>
 </html>
