--- a/pages/news.html
+++ b/pages/news.html
@@ -13,7 +13,7 @@
 
             <div class="responsive-header">
                 <button class="burger-menu">
-                            <div class="hamburger is-active">
+                            <div class="hamburger">
                                 <div class="bar"></div>
                             </div>
 
@@ -24,6 +24,7 @@
                     </button>
 
                 <div class="icon">
+                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -36,6 +37,7 @@
             <div class="top">
 
                 <div class="header-img">
+                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -74,6 +76,18 @@
                 </div>
             </div>
         </header>
+
+        <nav class="mobile-nav">
+            <ul>
+                <li><a href="../index.html">მთავარი</a></li>
+                <li><a href="../pages/apple.html">APPLE</a></li>
+                <li><a href="../pages/samsung.html">SAMSUNG</a></li>
+                <li><a href="../pages/services.html">სერვისები  </a></li>
+                <li><a class="header-main">ELIT NEWS</a></li>
+                <li><a href="../pages/about-us.html">ჩვენს შესახებ</a></li>
+                <li><a href="../pages/contact.html">კონტაქტი</a></li>
+            </ul>
+        </nav>
 
         <main class="news-main">
             <section class="news-section">
@@ -275,6 +289,7 @@
         </footer>
 
     </div>
-    
+
+    <script src="../js/main.js"></script>
 </body>
 </html>
