--- a/pages/phones/iphone-xr-64gb.html
+++ b/pages/phones/iphone-xr-64gb.html
@@ -14,7 +14,7 @@
 
             <div class="responsive-header">
                 <button class="burger-menu">
-                            <div class="hamburger is-active">
+                            <div class="hamburger">
                                 <div class="bar"></div>
                             </div>
 
@@ -25,6 +25,7 @@
                     </button>
 
                 <div class="icon">
+                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -37,6 +38,7 @@
             <div class="top">
 
                 <div class="header-img">
+                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
