--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -25,7 +25,7 @@
                     </button>
 
                 <div class="icon">
-                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
+                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -38,7 +38,7 @@
             <div class="top">
 
                 <div class="header-img">
-                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
+                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../index.html"><img src="../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
