--- a/pages/news.pages/apple-2022.html
+++ b/pages/news.pages/apple-2022.html
@@ -24,7 +24,7 @@
                     </button>
 
                 <div class="icon">
-                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
+                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -37,7 +37,7 @@
             <div class="top">
 
                 <div class="header-img">
-                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
+                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -56,10 +56,10 @@
 
             <div class="bottom">
 
-                <div class="bottom-nav">
-                    <nav>
-                        <ul>
-                            <li><a href="../../pages/apple.html">APPLE   </a></li>
+                    <div class="bottom-nav">
+                        <nav>
+                            <ul>
+                            <li><a class="header-main">APPLE   </a></li>
                             <li><a href="../../pages/samsung.html">SAMSUNG </a></li>
                             <li><a href="../../pages/services.html">სერვისები</a></li>
                             <li><a href="../../pages/about-us.html">ჩვენს შესახებ</a></li>
@@ -68,13 +68,13 @@
                     </nav>
                 </div>
 
-                <div class="header-input">
-                    <form action="">
-                        <input type="text" placeholder="ძიება">
-                        <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                    </form>
+                    <div class="header-input">
+                        <form action="">
+                            <input type="text" placeholder="ძიება">
+                            <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                        </form>
+                    </div>
                 </div>
-            </div>
         </header>
 
         <main class="audi-5-g-main">
