--- a/pages/news.pages/samsung-galaxy-s22.html
+++ b/pages/news.pages/samsung-galaxy-s22.html
@@ -24,7 +24,7 @@
                     </button>
 
                 <div class="icon">
-                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
+                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <img src="../../../images/main-images/elitmobimain.png" alt="elitmobi icon">
                 </div>
 
@@ -37,7 +37,7 @@
             <div class="top">
 
                 <div class="header-img">
-                    <a href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>    
+                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>    
                     <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
