added burger navbar on news pages

--- a/pages/news.pages/audi-5-G.html
+++ b/pages/news.pages/audi-5-G.html
@@ -24,7 +24,7 @@
                     </button>
 
                 <div class="icon">
-                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
+                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <img src="../../../images/main-images/elitmobimain.png" alt="elitmobi icon">
                 </div>
 
@@ -37,7 +37,7 @@
             <div class="top">
 
                 <div class="header-img">
-                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
+                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -76,6 +76,18 @@
                 </div>
             </div>
         </header>
+
+        <nav class="mobile-nav">
+            <ul>
+                <li><a class="header-main">მთავარი</a></li>
+                <li><a href="pages/apple.html">APPLE</a></li>
+                <li><a href="pages/samsung.html">SAMSUNG</a></li>
+                <li><a href="pages/services.html">სერვისები  </a></li>
+                <li><a href="pages/news.html">ELIT NEWS</a></li>
+                <li><a href="pages/about-us.html">ჩვენს შესახებ</a></li>
+                <li><a href="pages/contact.html">კონტაქტი</a></li>
+            </ul>
+        </nav>
 
         <main class="audi-5-g-main">
             <section>
@@ -127,6 +139,6 @@
 
     </div>
     
-
+    <script src="../../js/main.js"></script>
 </body>
 </html>
