--- a/pages/phones/iphone-xr-64gb.html
+++ b/pages/phones/iphone-xr-64gb.html
@@ -25,7 +25,7 @@
                     </button>
 
                 <div class="icon">
-                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
+                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -38,7 +38,7 @@
             <div class="top">
 
                 <div class="header-img">
-                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
+                   <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
                     <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
                 </div>
 
@@ -77,6 +77,18 @@
                 </div>
             </div>
         </header>
+
+        <nav class="mobile-nav">
+            <ul>
+                <li><a class="header-main">მთავარი</a></li>
+                <li><a href="pages/apple.html">APPLE</a></li>
+                <li><a href="pages/samsung.html">SAMSUNG</a></li>
+                <li><a href="pages/services.html">სერვისები  </a></li>
+                <li><a href="pages/news.html">ELIT NEWS</a></li>
+                <li><a href="pages/about-us.html">ჩვენს შესახებ</a></li>
+                <li><a href="pages/contact.html">კონტაქტი</a></li>
+            </ul>
+        </nav>
 
         <main class="phones-main">
             <section class="section1">
@@ -126,6 +138,6 @@
 
     </div>
 
-    
+    <script src="../../js/main.js"></script>
 </body>
 </html>
