linked hrefs to social icons

--- a/pages/news.pages/samsung-galaxy-ring.html
+++ b/pages/news.pages/samsung-galaxy-ring.html
@@ -79,13 +79,13 @@
 
         <nav class="mobile-nav">
             <ul>
-                <li><a class="header-main">მთავარი</a></li>
-                <li><a href="pages/apple.html">APPLE</a></li>
-                <li><a href="pages/samsung.html">SAMSUNG</a></li>
-                <li><a href="pages/services.html">სერვისები  </a></li>
-                <li><a href="pages/news.html">ELIT NEWS</a></li>
-                <li><a href="pages/about-us.html">ჩვენს შესახებ</a></li>
-                <li><a href="pages/contact.html">კონტაქტი</a></li>
+                <li><a href="../../index.html">მთავარი</a></li>
+                <li><a href="../../pagesapple.html">APPLE</a></li>
+                <li><a href="../../pages/samsung.html">SAMSUNG</a></li>
+                <li><a href="../../pages/services.html">სერვისები  </a></li>
+                <li><a href="../../pages/news.html">ELIT NEWS</a></li>
+                <li><a href="../../pages/about-us.html">ჩვენს შესახებ</a></li>
+                <li><a href="../../pages/contact.html">კონტაქტი</a></li>
             </ul>
         </nav>
 
@@ -113,13 +113,13 @@
                     <p>ზუსტი სპეციფიკაციები ჯერჯერობით უცნობია მაგრამ დასახელდა რომ რამდენიმე ფერი იქნება გაყიდვაში და რამდენიმე ზომა , ასევე ჯერჯერობით არარის ინფორმაცია დაზუსტებული იმუშავებს თუ არა Samsung ის გარდა სხვა ტელეფონებზე</p>
                 </div>
 
-                <div class="icons">
-                    <a href="" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="" class="pinterest"><i class="fa-brands fa-pinterest"></i></a>
-                    <a href="" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="" class="telegram"><i class="fa-brands fa-telegram"></i></a>
-                </div>
+                    <div class="icons">
+                        <a target="_blank" href="https://www.facebook.com" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a target="_blank" href="https://www.twitter.com" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+                        <a target="_blank" href="https://pinterest.com" class="pinterest"><i class="fa-brands fa-pinterest"></i></a>
+                        <a target="_blank" href="https://www.linkedin.com" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a target="_blank" href="https://telegram.org" class="telegram"><i class="fa-brands fa-telegram"></i></a>
+                    </div>
 
             </section>
         </main>
