--- a/pages/contact.html
+++ b/pages/contact.html
@@ -109,11 +109,11 @@
                     </div>
 
                     <div class="icons">
-                        <a href="" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="" class="pinterest"><i class="fa-brands fa-pinterest"></i></a>
-                        <a href="" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="" class="telegram"><i class="fa-brands fa-telegram"></i></a>
+                        <a target="_blank" href="https://www.facebook.com" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a target="_blank" href="https://www.twitter.com" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+                        <a target="_blank" href="https://pinterest.com" class="pinterest"><i class="fa-brands fa-pinterest"></i></a>
+                        <a target="_blank" href="https://www.linkedin.com" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a target="_blank" href="https://telegram.org" class="telegram"><i class="fa-brands fa-telegram"></i></a>
                     </div>
 
                 </div>
