--- a/pages/news.pages/apple-device.html
+++ b/pages/news.pages/apple-device.html
@@ -25,7 +25,7 @@
 
                 <div class="icon">
                    <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                    <img src="../../images/main-images/elitmobimain.png" alt="icon">
+                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="icon"></a>
                 </div>
 
 
@@ -38,13 +38,13 @@
 
                 <div class="header-img">
                    <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                    <img src="../../images/main-images/elitmobimain.png" alt="icon">
+                   <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="icon"></a>
                 </div>
 
                 <div class="top-nav">
                     <nav>
                       <ul>
-                        <li><a href="../../../index.html">მთავარი</a></li>
+                        <li><a href="../../index.html">მთავარი</a></li>
                         <li><a href="../../pages/news.html">ELIT NEWS</a></li>
                         <li><a href="../../pages/about-us.html">ჩვენს შესახებ</a></li>
                         <li><a href="../../pages/contact.html">კონტაქტი</a></li>
@@ -79,13 +79,13 @@
 
         <nav class="mobile-nav">
             <ul>
-                <li><a class="header-main">მთავარი</a></li>
-                <li><a href="pages/apple.html">APPLE</a></li>
-                <li><a href="pages/samsung.html">SAMSUNG</a></li>
-                <li><a href="pages/services.html">სერვისები  </a></li>
-                <li><a href="pages/news.html">ELIT NEWS</a></li>
-                <li><a href="pages/about-us.html">ჩვენს შესახებ</a></li>
-                <li><a href="pages/contact.html">კონტაქტი</a></li>
+                <li><a href="../../index.html">მთავარი</a></li>
+                <li><a href="../../pages/apple.html">APPLE</a></li>
+                <li><a href="../../pages/samsung.html">SAMSUNG</a></li>
+                <li><a href="../../pages/services.html">სერვისები  </a></li>
+                <li><a href="../../pages/news.html">ELIT NEWS</a></li>
+                <li><a href="../../pages/about-us.html">ჩვენს შესახებ</a></li>
+                <li><a href="../../pages/contact.html">კონტაქტი</a></li>
             </ul>
         </nav>
 
@@ -111,13 +111,13 @@
                     <p>ერჯერობით დაზუსტებული ინფორმაცია არარის, მაგრამ გავრცელებული ინფორმაციით Apple ი ამ კვირაში 2 ახალ მოწყობილობას წარადგენს ესენია : iPad და Mac ის კომპიუტერები</p>
                 </div>
 
-                <div class="icons">
-                    <a href="" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="" class="pinterest"><i class="fa-brands fa-pinterest"></i></a>
-                    <a href="" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="" class="telegram"><i class="fa-brands fa-telegram"></i></a>
-                </div>
+                    <div class="icons">
+                        <a target="_blank" href="https://www.facebook.com" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a target="_blank" href="https://www.twitter.com" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+                        <a target="_blank" href="https://pinterest.com" class="pinterest"><i class="fa-brands fa-pinterest"></i></a>
+                        <a target="_blank" href="https://www.linkedin.com" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a target="_blank" href="https://telegram.org" class="telegram"><i class="fa-brands fa-telegram"></i></a>
+                    </div>
 
             </section>
         </main>
