--- a/pages/news.pages/ios-17.html
+++ b/pages/news.pages/ios-17.html
@@ -25,7 +25,8 @@
 
                 <div class="icon">
                    <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                    <img src="../../../images/main-images/elitmobimain.png" alt="elitmobi icon">
+                   <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="icon"></a>
+
                 </div>
 
 
@@ -38,7 +39,8 @@
 
                 <div class="header-img">
                    <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
+                   <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="icon"></a>
+
                 </div>
 
                 <div class="top-nav">
@@ -113,11 +115,11 @@
                 </div>
 
                 <div class="icons">
-                    <a href="" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="" class="pinterest"><i class="fa-brands fa-pinterest"></i></a>
-                    <a href="" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="" class="telegram"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="https://www.facebook.com" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.twitter.com" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://pinterest.com" class="pinterest"><i class="fa-brands fa-pinterest"></i></a>
+                    <a href="https://www.linkedin.com" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://telegram.org" class="telegram"><i class="fa-brands fa-telegram"></i></a>
                 </div>
 
             </section>
