--- a/pages/phones/iphone-xr-64gb.html
+++ b/pages/phones/iphone-xr-64gb.html
@@ -26,7 +26,8 @@
 
                 <div class="icon">
                    <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
+                   <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="icon"></a>
+
                 </div>
 
 
@@ -39,15 +40,16 @@
 
                 <div class="header-img">
                    <a target="_blank" href="https://www.tbceducation.ge/"><img class="tbc-logo tbc-logo2" src="../../images/main-images/tbc-logo.png" alt="tbc-logo"></a>
-                    <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="elitmobi icon"></a>
+                   <a href="../../index.html"><img src="../../images/main-images/elitmobimain.png" alt="icon"></a>
+
                 </div>
 
                 <div class="top-nav">
                     <nav>
                       <ul>
                         <li><a href="../../../index.html">მთავარი</a></li>
-                        <li><a href="../../pages/news.html">ELIT NEWS   </a></li>
-                        <li><a href="../../pages/about-us">ჩვენს შესახებ</a></li>
+                        <li><a href="../../pages/news.html">ELIT NEWS</a></li>
+                        <li><a href="../../pages/about-us.html">ჩვენს შესახებ</a></li>
                         <li><a href="../../pages/contact.html">კონტაქტი</a></li>
                       </ul>
                     </nav>
@@ -60,11 +62,11 @@
                 <div class="bottom-nav">
                     <nav>
                         <ul>
-                            <li><a href="../pages/apple.html">APPLE   </a></li>
-                            <li><a href="../pages/samsung.html">SAMSUNG </a></li>
+                            <li><a href="../../pages/apple.html">APPLE   </a></li>
+                            <li><a href="../../pages/samsung.html">SAMSUNG </a></li>
                             <li><a href="../../pages/services.html">სერვისები</a></li>
-                            <li><a href="../pages/about-us">ჩვენს შესახებ</a></li>
-                            <li><a href="../pages/contact.html">კონტაქტი</a></li>
+                            <li><a href="../../pages/about-us.html">ჩვენს შესახებ</a></li>
+                            <li><a href="../../pages/contact.html">კონტაქტი</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -80,13 +82,13 @@
 
         <nav class="mobile-nav">
             <ul>
-                <li><a class="header-main">მთავარი</a></li>
-                <li><a href="pages/apple.html">APPLE</a></li>
-                <li><a href="pages/samsung.html">SAMSUNG</a></li>
-                <li><a href="pages/services.html">სერვისები  </a></li>
-                <li><a href="pages/news.html">ELIT NEWS</a></li>
-                <li><a href="pages/about-us.html">ჩვენს შესახებ</a></li>
-                <li><a href="pages/contact.html">კონტაქტი</a></li>
+                <li><a href="../../index.html">მთავარი</a></li>
+                <li><a href="../../pagesapple.html">APPLE</a></li>
+                <li><a href="../../pages/samsung.html">SAMSUNG</a></li>
+                <li><a href="../../pages/services.html">სერვისები  </a></li>
+                <li><a href="../../pages/news.html">ELIT NEWS</a></li>
+                <li><a href="../../pages/about-us.html">ჩვენს შესახებ</a></li>
+                <li><a href="../../pages/contact.html">კონტაქტი</a></li>
             </ul>
         </nav>
 
